refactor: add essential credentials for login route
